<resources>
    <string name="app_name">Segurança Digital</string>
    <string name="title_activity_main">Segurança Digital</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fake_report_content">Falsa comunicação a Polícia é crime previsto no Artigo 340 do Código Penal Brasileiro, ficando sujeito o autor a detenção de 1 a 6 meses ou multa.</string>
    <string name="fake_report_title">Falsa declaração</string>
    <string name="make_anonymous_report">Fazer Denúncia Anônima</string>
    <string name="rn">RN</string>
    <string name="municipio">Município</string>
    <string name="pontoDeReferencia">Ponto de Referência</string>
    <string name="complemento">Complemento</string>
    <string name="cep">Cep</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="endereco_do_fato">Endereço do Fato</string>
    <string name="hora_da_ocorrencia">Hora da ocorrência</string>
    <string name="dia_da_ocorrencia">Dia da ocorrência</string>
    <string name="estado">Estado</string>
    <string name="denuncia_anonima">Denúncia Anônima</string>
    <string name="voltar">Voltar</string>
    <string name="buscar_por_imei">Buscar por IMEI</string>
    <string name="email">E-mail</string>
    <string name="entrar">Entrar</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="telefone">Telefone</string>
    <string name="senha">Senha</string>
    <string name="repetir_senha">Repetir Senha</string>
    <string name="criar_usuario">Criar Usuário</string>
    <string name="imei_do_celular">IMEI do celular</string>
    <string name="dia_da_compra">Dia da compra</string>
    <string name="quando_comprou">Quando comprou</string>
    <string name="modelo_do_aparelho">Modelo do aparelho</string>
    <string name="salvar">Salvar</string>
    <string name="meus_celulares">Meus Celulares</string>
    <string name="reportar_roubo">Reportar Roubo</string>
    <string name="adicionar_outro">Adicionar Outro</string>
</resources>
