<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/themeDefault"
    tools:context="totabraz.com.socorromovel.activities.informations.AnonymousReportAlertActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            style="@style/textTitleBold"
            android:layout_above="@+id/info"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/fake_report_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/text"
            android:id="@+id/info"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/fake_report_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <Button
        android:text="@string/make_anonymous_report"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnConfirm"
        style="@style/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
