<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
style="@style/themeDefault"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="totabraz.com.socorromovel.activities.AddPhoneActivity">

<ScrollView
    android:layout_above="@id/btnConfirm"
    android:id="@+id/svAreal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/labelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:maxLines="1"
                    android:inputType="text"
                    android:id="@+id/edImei"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/imei_do_celular" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/labelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:maxLines="1"
                    android:inputType="text"
                    android:id="@+id/edDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/quando_comprou" />
            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                style="@style/labelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:maxLines="1"
                    android:inputType="text"
                    android:id="@+id/edModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modelo_do_aparelho" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </TableLayout>
</ScrollView>
<Button
    style="@style/btnBottom"
    android:layout_alignParentBottom="true"
    android:id="@+id/btnConfirm"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/salvar" />
</RelativeLayout>
